--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
-  text-align: center;
+.content {
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  display: flex;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  margin-left: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navLi {
+  display: inline;
+  margin-right: 10px;
+}
+
+.mainContent {
+  height: 1000px;
+  position: relative;
+}
+
+.highlighted {
+  color: blue;
+}
+
+img {
+  height: 226px;
+}
+
+.svg-inline--fa {
+  height: 50px;
+  margin-right: 50px;
+}
+
+#portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.project {
+  height: 300px;
+  width: 500px;
+  margin-top: 20px;
+  border: 5px solid black;
+}
+
+.projectContainer {
+  height: 100%;
+  width: 100%;
+}
+
+.projectImg {
+  height: 100%;
+  width: 100%;
+}
+
+.projectContent {
+  position: relative;
+  bottom: 300px;
+}
+
+.links {
+  display: flex;
+}
+
+.hide {
+  display: none;
+}
+
+.projectContainer:hover img {
+  opacity: 0.5;
+}
+
+.projectContainer:hover .hide {
+  display: block;
+} 
+
+.gHLink  {
+  opacity: 0.5;
+  margin-left: 15px;
+}
+
+.appLink {
+  opacity: 0.5;
+}
+
+.gHLink:hover {
+  opacity: 1;
+}
+
+.appLink:hover {
+  opacity: 1;
+}
+
+.contact {
+  display: flex;
+  justify-content: space-around;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+label {
+  margin: 10px 10px;
+}
+
+input {
+  height: 20px;
+}
+
+button {
+  margin-top: 10px;
+  width: 80px;
+  height: 30px;
+}
+
+.icons {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+footer {
+  height: 60px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
