add header bg and final touches to first version

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+h1, h2, h3, li {
+  font-family: 'Trebuchet MS, Verdana, sans-serif';
+}
+
+header {
+  background-image: url("../public/images/header.jpeg");
+  background-size: cover;
+  background-position: center;
+}
+
 .title:hover {
   cursor: pointer;
 }
