--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ h1, h2, h3, li {
   font-family: 'Trebuchet MS, Verdana, sans-serif';
 }
 
+body {
+  background-color: black;
+}
+
 header {
   background-image: url("../public/images/header.jpeg");
   background-size: cover;
